nav playlist overflow, fix

--- a/css/style.css
+++ b/css/style.css
@@ -59,22 +59,30 @@ nav {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100%;
     width: 230px;
     overflow: hidden;
 }
 
-#playlist {
-    overflow: auto;
+#nav-playlist {
+    overflow-y: auto;
+    max-height: calc(100vh - 350px);
 }
 
 /* NAVBAR STYLE */
 
-.nav-top img {
+.nav-main li {
+    margin-bottom: 8px;
+}
+
+.nav-main ul {
+    margin-bottom: 2rem;
+}
+
+.nav-main img {
     opacity: 0.7;
 }
 
-.nav-top img:hover {
+.nav-main img:hover {
     opacity: 1;
 }
 
@@ -102,13 +110,13 @@ nav h4 {
 }
 
 nav ul li,
-.user span {
+.nav-user span {
     font-size: 0.8rem;
 }
 
 nav li,
-.user span,
-.user h4 {
+.nav-user span,
+.nav-user h4{
     display: flex;
     align-items: center;
     gap: 5px;
@@ -120,7 +128,7 @@ nav h4 {
     padding-left: 1rem;
 }
 
-.user {
+.nav-user {
     padding: 1rem;
 }
 
@@ -129,20 +137,17 @@ nav h4 {
     border-radius: 50%;
 }
 
-.user span {
+.nav-user span {
     padding: 0;
     border-bottom: 1px solid white;
     padding-bottom: 10px;
 }
 
-.user h4 {
+.nav-user h4 {
     padding: 0;
     padding-top: 10px;
 }
 
-nav ul {
-    margin-bottom: 2rem;
-}
 
 /* NAVBAR HOVER */
 
